Able to convert speech to text; next step is to clean it up and pass the results up to a Cloud Function

--- a/frontend/visionboard/ios/Runner/Info.plist
+++ b/frontend/visionboard/ios/Runner/Info.plist
@@ -43,5 +43,13 @@
 	</array>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<false/>
+	<key>NSBonjourServices</key>
+    <array>
+        <string>_dartobservatory._tcp</string>
+    </array>
+	<key>NSSpeechRecognitionUsageDescription</key>
+    <string>We record audio to convert it to text to draw images.</string>
+    <key>NSMicrophoneUsageDescription</key>
+    <string>We record audio to convert it to text to draw images.</string>
 </dict>
 </plist>
