--- a/frontend/visionboard/android/app/src/main/AndroidManifest.xml
+++ b/frontend/visionboard/android/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.visionboard">
    <application
-        android:label="visionboard"
+        android:label="SpokenVision"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
         <activity
