--- a/frontend/visionboard/pubspec.yaml
+++ b/frontend/visionboard/pubspec.yaml
@@ -22,7 +22,7 @@ dev_dependencies:
   flutter_lints: ^1.0.0
   flutter_launcher_icons: ^0.9.2
   flutter_native_splash: ^2.0.5
-  #  flutter_launcher_name: ^0.0.1
+#  flutter_launcher_name: ^0.0.1
 
 flutter:
   uses-material-design: true
@@ -32,16 +32,16 @@ flutter:
 
 # Set launcher name: https://pub.dev/packages/flutter_launcher_name
 flutter_launcher_name:
-  name: 'Vision Board'
+  name: 'SpokenVision'
 
 # Generate app icons: https://pub.dev/packages/flutter_launcher_icons
 flutter_icons:
   android: false
   ios: true
-  image_path: "assets/images/eye_logo.png"
+  image_path: "assets/images/sv_logo.png"
 
 # Generate splash screens: https://pub.dev/packages/flutter_native_splash
 flutter_native_splash:
   color: '#000000'
-  image: 'assets/images/eye_logo.png'
+  image: 'assets/images/sv_logo.png'
 
